--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/documentai": "^2.3.0",
+    "@google-cloud/storage": "^5.7.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
+    "fuzzyset.js": "^1.0.6",
     "heroku": "^7.47.7",
     "mongodb": "^3.6.3"
   },
